--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=7785
-spring.datasource.url=jdbc:postgresql://localhost:5432/pode_store
-spring.datasource.username=adedotun
-spring.datasource.password=itiswell
+spring.datasource.url=jdbc:postgresql://postgres-db:5432/pode_store
+spring.datasource.username=postgres
+spring.datasource.password=demo
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
